# MayaApp

./: .gitmodules  CMakeLists.txt
app/: main.cpp
engine/: CMakeLists.txt
engine/include/: Maya.hpp  Maya2D.hpp  Maya3D.hpp
engine/include/Maya/: audio_stream.hpp  core.hpp  deviceinfo.hpp  event.hpp  font.hpp  launch.hpp  math.hpp  resources.hpp  scene.hpp  shader.hpp  texture.hpp  transformation.hpp  value_tracker.hpp  vertex_array.hpp  window.hpp
engine/include/Maya/2D/: graphics.hpp  renderer.hpp
engine/include/Maya/3D/: camera.hpp  graphics.hpp  model.hpp
engine/res/: Maya_2D.frag.glsl  Maya_2D.vert.glsl
engine/res/2D/shaders/: default.vert.glsl
engine/res/3D/shaders/: default.frag.glsl
engine/resource/2D/shaders/: default.frag.glsl
engine/resource/3D/shaders/: default.frag.glsl  default.vert.glsl
engine/source/: audio_stream.cpp  deviceinfo.cpp  launch.cpp  scene.cpp  texture.cpp  vertex_array.cpp  window.cpp
engine/source/2D/: graphics.cpp
engine/source/3D/: camera.cpp  graphics.cpp  model.cpp
engine/src/: audio_stream.cpp  deviceinfo.cpp  font.cpp  launch.cpp  private_control.hpp  resources.cpp  scene.cpp  shader.cpp  texture.cpp  transformation.cpp  value_tracker.cpp  vertex_array.cpp  window.cpp
engine/src/2D/: graphics.cpp  renderer.cpp
engine/src/3D/: graphics.cpp
